# sriovmng

./: .gitignore  README  README.markdown  setup.cfg  sriovlib.py  sriovmng  sriovmng.py  tox.ini
sriovlib/: exceptions.py  sriov.py  utils.py
