[metadata]
name = sriovmng
version = 0.1
description = A tiny tool to make management of SR-IOV based devices a little easier
description-file = 
    README.markdown
author = Roman Bogorodskiy
author-email = novel@FreeBSD.org
home-page = https://github.com/novel/sriovmng
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: System Administrators
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python

[files]
packages =
    sriovlib
scripts =
    sriovmng

[pbr]
skip_authors = true
skip_changelog = true
